# MPrc

./: .gitignore  CMakeLists.txt  LICENSE  MPrc.sln  README.md
Host/: CMakeLists.txt  Host.vcxproj  Host.vcxproj.filters
Host/Src/: Exception.cpp  HostException.cpp  dllmain.cpp  pch.h
Include/: Host.h  HostException.h  Media.h  MediaException.h  MediaFrame.h  MediaFrameFilename.h  MediaGeometry.h  MediaLogger.h  MediaUtf16Utf8.h
Include/spdlog/: logger.h  pattern_formatter-inl.h  spdlog-inl.h  spdlog.h
Include/spdlog/details/: log_msg.h  os-inl.h  registry-inl.h  registry.h
Include/spdlog/fmt/: fmt.h
Include/spdlog/sinks/: stdout_color_sinks-inl.h  wincolor_sink-inl.h
Linux/: CMakeLists.txt
MapColours/: CMakeLists.txt  MapColours.vcxproj  MapColours.vcxproj.filters
MapColours/Src/: MapColours.cpp
Media/: CMakeLists.txt  Media.vcxproj  Media.vcxproj.filters
Media/Src/: ExceptionLogger.cpp  Frame.cpp  FrameColourMappers.cpp  FrameFilename.cpp  LetterBox.cpp  Logger.cpp  Utf16Utf8.cpp  pch.h
TestHost/: CMakeLists.txt  TestHost.vcxproj  packages.config
TestHost/Src/: TestException.cpp  TestHostException.cpp  main.cpp  pch.h
TestHost/src/: TestHostException.cpp
TestMedia/: CMakeLists.txt  TestMedia.vcxproj  test.exr
TestMedia/Src/: TestException.cpp  TestExr.cpp  TestFileIO.cpp  TestFrame.cpp  TestFrameFilename.cpp  TestGeometry.cpp  TestUnicode.cpp  TestUtf16Utf8.cpp  pch.h
Viewer/: CMakeLists.txt  Viewer.vcxproj  Viewer.vcxproj.filters
Viewer/Src/: Resource.h  Viewer.cpp  Viewer.rc  framework.h
